--- a/roobetWIndow.html
+++ b/roobetWIndow.html
@@ -683,11 +683,15 @@
               <button class="close-popUp">&times;</button>
               <h1>Roober</h1>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Deserunt harum quidem quam nisi recusandae aperiam non aliquam
+                delectus dignissimos, amet aut beatae velit earum! Quisquam
+                veniam quasi possimus dolor voluptas. Lorem ipsum dolor sit
+                amet, consectetur adipisicing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                veniam, quis nostrud exercitation ullamco laboris nisi ut
+                aliquip ex ea commodo consequat. Duis aute irure dolor in
+                reprehenderit in voluptate velit esse cillum dolore eu fugiat
                 nulla pariatur. Excepteur sint occaecat cupidatat non proident,
                 sunt in culpa qui officia deserunt mollit anim id est laborum.
               </p>
