--- a/Sports/index.html
+++ b/Sports/index.html
@@ -756,7 +756,7 @@
               <img
                 class="moreInfo-img"
                 src="/img/news-banners/mcgregor-sports.webp"
-                alt=""
+                alt="mcgregor img"
               />
 
               <div class="deposit-methods">
@@ -891,7 +891,7 @@
               <img
                 class="moreInfo-img"
                 src="/img/news-banners/mcgregor-sports.webp"
-                alt=""
+                alt="mecgregor img"
               />
 
               <div class="deposit-methods">
@@ -1034,7 +1034,7 @@
               <img
                 class="moreInfo-img"
                 src="/img/news-banners/mcgregor-sports.webp"
-                alt=""
+                alt="mecgregor img"
               />
 
               <div class="deposit-methods">
@@ -1173,7 +1173,7 @@
               <img
                 class="moreInfo-img"
                 src="/img/news-banners/mcgregor-sports.webp"
-                alt=""
+                alt="mecgregor img"
               />
 
               <div class="deposit-methods">
@@ -1311,7 +1311,7 @@
               <img
                 class="moreInfo-img"
                 src="/img/news-banners/mcgregor-sports.webp"
-                alt=""
+                alt="mecgregor img"
               />
 
               <div class="deposit-methods">
@@ -1450,7 +1450,7 @@
               <img
                 class="moreInfo-img"
                 src="/img/news-banners/mcgregor-sports.webp"
-                alt=""
+                alt="mecgregor img"
               />
 
               <div class="deposit-methods">
@@ -1584,7 +1584,7 @@
               <img
                 class="moreInfo-img"
                 src="/img/news-banners/mcgregor-sports.webp"
-                alt=""
+                alt="mecgregor img"
               />
 
               <div class="deposit-methods">
@@ -1720,7 +1720,7 @@
               <img
                 class="moreInfo-img"
                 src="/img/news-banners/mcgregor-sports.webp"
-                alt=""
+                alt="mecgregor img"
               />
 
               <div class="deposit-methods">
@@ -1858,7 +1858,7 @@
               <img
                 class="moreInfo-img"
                 src="/img/news-banners/mcgregor-sports.webp"
-                alt=""
+                alt="mecgregor img"
               />
 
               <div class="deposit-methods">
@@ -2000,7 +2000,7 @@
               <img
                 class="moreInfo-img"
                 src="/img/news-banners/mcgregor-sports.webp"
-                alt=""
+                alt="mecgregor img"
               />
 
               <div class="deposit-methods">
@@ -2136,7 +2136,7 @@
               <img
                 class="moreInfo-img"
                 src="/img/news-banners/mcgregor-sports.webp"
-                alt=""
+                alt="mecgregor img"
               />
 
               <div class="deposit-methods">
@@ -2272,7 +2272,7 @@
               <img
                 class="moreInfo-img"
                 src="/img/news-banners/mcgregor-sports.webp"
-                alt=""
+                alt="mecgregor img"
               />
 
               <div class="deposit-methods">
@@ -2412,7 +2412,7 @@
               <img
                 class="moreInfo-img"
                 src="/img/news-banners/mcgregor-sports.webp"
-                alt=""
+                alt="mecgregor img"
               />
 
               <div class="deposit-methods">
