fixing missing alt txt

--- a/Esports/index.html
+++ b/Esports/index.html
@@ -56,7 +56,6 @@
   </head>
 
   <body>
-    
     <div id="ESports-backgound"></div>
     <!-- Google Tag Manager (noscript) -->
     <noscript
@@ -521,7 +520,7 @@
               <img
                 class="moreInfo-img"
                 src="/img/news-banners/jhin-lol.webp"
-                alt=""
+                alt="jhin img"
               />
               <div class="deposit-methods">
                 <h2>Deposit Methods:</h2>
@@ -690,7 +689,7 @@
               <img
                 class="moreInfo-img"
                 src="/img/news-banners/jhin-lol.webp"
-                alt=""
+                alt="jhin img"
               />
 
               <div class="deposit-methods">
@@ -862,7 +861,7 @@
               <img
                 class="moreInfo-img"
                 src="/img/news-banners/jhin-lol.webp"
-                alt=""
+                alt="jhin img"
               />
 
               <div class="deposit-methods">
@@ -1031,7 +1030,7 @@
               <img
                 class="moreInfo-img"
                 src="/img/news-banners/jhin-lol.webp"
-                alt=""
+                alt="jhin img"
               />
 
               <div class="deposit-methods">
@@ -1206,7 +1205,7 @@
               <img
                 class="moreInfo-img"
                 src="/img/news-banners/jhin-lol.webp"
-                alt=""
+                alt="jhin img"
               />
 
               <div class="deposit-methods">
@@ -1343,7 +1342,7 @@
               <img
                 class="moreInfo-img"
                 src="/img/news-banners/jhin-lol.webp"
-                alt=""
+                alt="jhin img"
               />
 
               <div class="deposit-methods">
@@ -1514,7 +1513,7 @@
               <img
                 class="moreInfo-img"
                 src="/img/news-banners/jhin-lol.webp"
-                alt=""
+                alt="jhin img"
               />
 
               <div class="deposit-methods">
@@ -1685,7 +1684,7 @@
               <img
                 class="moreInfo-img"
                 src="/img/news-banners/jhin-lol.webp"
-                alt=""
+                alt="jhin img"
               />
 
               <div class="deposit-methods">
