missing alt txt

--- a/Esports/index.html
+++ b/Esports/index.html
@@ -414,7 +414,7 @@
 
       <div class="container-casinos">
         <div class="lol-main">
-          <img src="/img/news-banners/yasuo-lol.webp" alt="" />
+          <img src="/img/news-banners/yasuo-lol.webp" alt="lol hero img" />
         </div>
 
         <!-- Roobet -->
