--- a/News-Articles/Kickstart-2025-with-Roobet/index.html
+++ b/News-Articles/Kickstart-2025-with-Roobet/index.html
@@ -229,7 +229,10 @@
           href="https://go.roobetaffiliates.com/visit/?bta=39114&nci=7021&utm_campaign=promojan "
           aria-label="Read more about Roobet promo"
         >
-          <img src="/img/news-banners/Kickstart-2025-with-Roobet-banner.webp" />
+          <img
+            src="/img/news-banners/Kickstart-2025-with-Roobet-banner.webp"
+            alt="roobet promo"
+          />
         </a>
         <div class="news-content-main">
           <h1>
