fixing with height eror in g.s console

--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
             <img
               id="logo-img"
               src="img/All4Wins-logo.webp"
+              width="300"
+              height="200"
               loading="lazy"
               alt="home page logo"
             />
@@ -95,6 +97,8 @@
         <div class="navigation-header">
           <img
             src="/img/All4Wins-logo.webp"
+            width="300"
+            height="200"
             alt="Logo"
             class="logo-image"
             loading="lazy"
@@ -108,6 +112,8 @@
             <div class="nav-link casino-link">
               <img
                 src="img/casino-logo.webp"
+                width="300"
+                height="200"
                 alt="Casino Icon"
                 class="nav-icon"
                 loading="lazy"
@@ -120,6 +126,8 @@
             <div class="nav-link esports-link">
               <img
                 src="img/controller-logo.webp"
+                width="300"
+                height="200"
                 alt="Esports Icon"
                 class="nav-icon"
                 loading="lazy"
@@ -132,6 +140,8 @@
             <div class="nav-link sports-link">
               <img
                 src="img/football-logo.webp"
+                width="300"
+                height="200"
                 alt="Sports Icon"
                 class="nav-icon"
                 loading="lazy"
@@ -147,6 +157,8 @@
           >
             <img
               src="/img/review-icon.webp"
+              width="300"
+              height="200"
               alt="Reviews Icon"
               class="nav-icon"
               loading="lazy"
@@ -173,6 +185,8 @@
           >
             <img
               src="img/diamond-logo.webp"
+              width="300"
+              height="200"
               alt="Bonus Icon"
               class="nav-icon"
               loading="lazy"
@@ -190,6 +204,8 @@
             <div class="nav-link news-link">
               <img
                 src="img/news-logo.webp"
+                width="300"
+                height="200"
                 alt="News Icon"
                 class="nav-icon"
                 loading="lazy"
@@ -218,6 +234,8 @@
           <img
             class="poker-cards-casino"
             src="/img/news-banners/slot-machine-main.webp"
+            width="300"
+            height="200"
             alt="poker cards"
           />
           <div class="content-text">
@@ -255,6 +273,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/mission-unscrollable.webp"
+                        width="300"
+                        height="200"
                         alt="Mission Uncrossable Banner"
                         loading="lazy"
                       />
@@ -275,6 +295,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/roobet-sportsbook-january-news.webp"
+                        width="300"
+                        height="200"
                         alt="Mission Uncrossable Banner"
                         loading="lazy"
                       />
@@ -297,6 +319,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/Kickstart-2025-with-Roobet-news.webp"
+                        width="300"
+                        height="200"
                         alt="ggbet-esl-bangkok-news"
                         loading="lazy"
                       />
@@ -321,6 +345,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/ggbet-weekly-fs-news.webp"
+                        width="300"
+                        height="200"
                         alt="ggbet-esl-bangkok-news"
                         loading="lazy"
                       />
@@ -345,6 +371,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/roobet-Santa-Sack-news.webp"
+                        width="300"
+                        height="200"
                         alt="ggbet-esl-bangkok-news"
                         loading="lazy"
                       />
@@ -369,6 +397,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/ggbet-winter-football-bonuses-news.webp"
+                        width="300"
+                        height="200"
                         alt="ggbet-esl-bangkok-news"
                         loading="lazy"
                       />
@@ -394,6 +424,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/betfuty-winter-fest-news.webp"
+                        width="300"
+                        height="200"
                         alt="ggbet-esl-bangkok-news"
                         loading="lazy"
                       />
@@ -419,6 +451,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/roobet-football-news.webp"
+                        width="300"
+                        height="200"
                         alt="ggbet-esl-bangkok-news"
                         loading="lazy"
                       />
@@ -450,6 +484,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/betfury-winter-drop-news.webp"
+                        width="300"
+                        height="200"
                         alt="ggbet-esl-bangkok-news"
                         loading="lazy"
                       />
@@ -472,6 +508,8 @@
                 <div class="news-item">
                   <a
                     href="/News-Articles/Duelbits-Beyond-Limits-This-Christmas/"
+                    width="300"
+                    height="200"
                   >
                     <div class="news-banner">
                       <img
@@ -501,6 +539,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/lootbet-blast-news.webp"
+                        width="300"
+                        height="200"
                         alt="Rlootbet blast"
                         loading="lazy"
                       />
@@ -526,6 +566,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/betfury-blackjack-tournamnet-news.webp"
+                        width="300"
+                        height="200"
                         alt="Roobet’s-Latest-Sportsbook-Promos"
                         loading="lazy"
                       />
@@ -552,6 +594,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/bcgame-horeseriding-news.webp"
+                        width="300"
+                        height="200"
                         alt="bcgame-horeseriding free bets"
                         loading="lazy"
                       />
@@ -577,6 +621,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/lootbet-slot-news.webp"
+                        width="300"
+                        height="200"
                         alt="lootbet-slot-news"
                         loading="lazy"
                       />
@@ -604,6 +650,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/lootbet-quest.webp"
+                        width="300"
+                        height="200"
                         alt="lootbet-quest"
                         loading="lazy"
                       />
@@ -628,6 +676,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/betfury-battles.webp"
+                        width="300"
+                        height="200"
                         alt="betfury-battles"
                         loading="lazy"
                       />
@@ -650,6 +700,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/roobet-sports-promo.webp"
+                        width="300"
+                        height="200"
                         alt="Roobet’s-Latest-Sportsbook-Promos"
                         loading="lazy"
                       />
@@ -673,6 +725,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/NewsBackground.webp"
+                        width="300"
+                        height="200"
                         alt="news"
                         loading="lazy"
                       />
@@ -697,6 +751,8 @@
           <img
             class="top3img"
             src="/img/news-banners/Blitzcrank-lol.webp"
+            width="300"
+            height="200"
             alt="Blitzcrank"
           />
           <div class="top3casinos">
@@ -718,7 +774,8 @@
                 >
                   <div class="top-left nr1"><p class="n1">1</p></div>
                   <div class="img-box-top">
-                    <img src="img/Roobet.webp" alt="Roobet logo" />
+                    <img src="img/Roobet.webp" alt="Roobet width="300"
+                    height="200" logo" />
                   </div>
 
                   <div class="content-top">
@@ -735,7 +792,12 @@
                 <a href="https://betfury.bet/d27e2abbb">
                   <div class="top-left nr2"><p class="n1">2</p></div>
                   <div class="img-box-top">
-                    <img src="/img/BetFury-logo.webp" alt="thunderpick logo" />
+                    <img
+                      src="/img/BetFury-logo.webp"
+                      width="300"
+                      height="200"
+                      alt="thunderpick logo"
+                    />
                   </div>
 
                   <div class="content-top">
@@ -754,7 +816,12 @@
                 >
                   <div class="top-left nr3"><p class="n1">3</p></div>
                   <div class="img-box-top">
-                    <img src="/img/loot.bet-logo.webp" alt="BetFury logo" />
+                    <img
+                      src="/img/loot.bet-logo.webp"
+                      width="300"
+                      height="200"
+                      alt="BetFury logo"
+                    />
                   </div>
 
                   <div class="content-top">
@@ -773,7 +840,12 @@
 
       <div class="container-casinos">
         <div class="casino-main">
-          <img src="/img/news-banners/jackpot-casino.webp" alt="slot machine" />
+          <img
+            src="/img/news-banners/jackpot-casino.webp"
+            width="300"
+            height="200"
+            alt="slot machine"
+          />
         </div>
         <!-- Roobet -->
         <div class="main">
@@ -786,6 +858,8 @@
                       <img
                         class="casino-image"
                         src="img/Roobet.webp"
+                        width="300"
+                        height="200"
                         loading="lazy"
                         alt="Roobet logo"
                       />
