fix alt text news slider

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                         src="/img/news-banners/Kickstart-2025-with-Roobet-news.webp"
                         width="300"
                         height="200"
-                        alt="ggbet-esl-bangkok-news"
+                        alt="Kickstart 2025 with Roobet: Over $1,000,000 in Crypto"
                         loading="lazy"
                       />
                     </div>
@@ -347,7 +347,7 @@
                         src="/img/news-banners/ggbet-weekly-fs-news.webp"
                         width="300"
                         height="200"
-                        alt="ggbet-esl-bangkok-news"
+                        alt=" GG.Bet Weekly Promotion"
                         loading="lazy"
                       />
                     </div>
@@ -373,7 +373,7 @@
                         src="/img/news-banners/roobet-Santa-Sack-news.webp"
                         width="300"
                         height="200"
-                        alt="ggbet-esl-bangkok-news"
+                        alt="Santa’s $1,000,000 Sack is Coming to Town"
                         loading="lazy"
                       />
                     </div>
@@ -399,7 +399,7 @@
                         src="/img/news-banners/ggbet-winter-football-bonuses-news.webp"
                         width="300"
                         height="200"
-                        alt="ggbet-esl-bangkok-news"
+                        alt="Winter Football Bonuses"
                         loading="lazy"
                       />
                     </div>
@@ -426,7 +426,7 @@
                         src="/img/news-banners/betfuty-winter-fest-news.webp"
                         width="300"
                         height="200"
-                        alt="ggbet-esl-bangkok-news"
+                        alt="Winter Wins Fest: BetFury’s $450,000 Holiday Promotion"
                         loading="lazy"
                       />
                     </div>
@@ -453,7 +453,7 @@
                         src="/img/news-banners/roobet-football-news.webp"
                         width="300"
                         height="200"
-                        alt="ggbet-esl-bangkok-news"
+                        alt="Score Big with Roobet’s Sportsbook Promotions"
                         loading="lazy"
                       />
                     </div>
@@ -486,7 +486,7 @@
                         src="/img/news-banners/betfury-winter-drop-news.webp"
                         width="300"
                         height="200"
-                        alt="ggbet-esl-bangkok-news"
+                        alt="BetFury Winter Drops Festival"
                         loading="lazy"
                       />
                     </div>
@@ -514,7 +514,7 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/duelbits-ch-bonus-news.webp"
-                        alt="ggbet-esl-bangkok-news"
+                        alt=" Duelbits: Rewarding Christmas Promos"
                         loading="lazy"
                       />
                     </div>
