--- a/index.html
+++ b/index.html
@@ -514,6 +514,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/duelbits-ch-bonus-news.webp"
+                        width="300"
+                        height="200"
                         alt=" Duelbits: Rewarding Christmas Promos"
                         loading="lazy"
                       />
