--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             src="/img/news-banners/slot-machine-main.webp"
             width="300"
             height="200"
-            loading="lazy"
+            rel="preload"
             alt="poker cards"
           />
           <div class="content-text">
