deleted unused jscode from html

--- a/News-Articles/BC.GAME-Horse-Racing-FreeBets/index.html
+++ b/News-Articles/BC.GAME-Horse-Racing-FreeBets/index.html
@@ -222,7 +222,7 @@
 
     <!-- Content -->
 
-    <main class="container-news" onclick="myFunction2()">
+    <main class="container-news">
       <div class="banner-box">
         <a
           href="https://bc.game/i-2bp167xaa-n/ "
