--- a/News-Articles/Bet-fury-Winter-Drops-Festival/index.html
+++ b/News-Articles/Bet-fury-Winter-Drops-Festival/index.html
@@ -225,7 +225,7 @@
 
     <!-- Content -->
 
-    <main class="container-news" onclick="myFunction2()">
+    <main class="container-news">
       <div class="banner-box">
         <a
           href="https://betfury.bet/d222bace9 "
