--- a/News-Articles/BetFury-Promo-Code/index.html
+++ b/News-Articles/BetFury-Promo-Code/index.html
@@ -220,7 +220,7 @@
 
     <!-- Content -->
 
-    <main class="container-news" onclick="myFunction2()">
+    <main class="container-news">
       <div class="banner-box">
         <a
           href=" https://betfury.bet/d345852ac  "
