--- a/News-Articles/GG.Bet-ESL-Bangkok/index.html
+++ b/News-Articles/GG.Bet-ESL-Bangkok/index.html
@@ -220,7 +220,7 @@
 
     <!-- Content -->
 
-    <main class="container-news" onclick="myFunction2()">
+    <main class="container-news" >
       <div class="banner-box">
         <a
           href="https://ggbetpro.com/l/66c4406e38014986d50f649d  "
