--- a/News-Articles/Kickstart-2025-with-Roobet/index.html
+++ b/News-Articles/Kickstart-2025-with-Roobet/index.html
@@ -223,7 +223,7 @@
 
     <!-- Content -->
 
-    <main class="container-news" onclick="myFunction2()">
+    <main class="container-news">
       <div class="banner-box">
         <a
           href="https://go.roobetaffiliates.com/visit/?bta=39114&nci=7021&utm_campaign=promojan "
