--- a/News-Articles/Loot.Bet-DreamLeague-Gifts/index.html
+++ b/News-Articles/Loot.Bet-DreamLeague-Gifts/index.html
@@ -223,7 +223,7 @@
 
     <!-- Content -->
 
-    <main class="container-news" onclick="myFunction2()">
+    <main class="container-news">
       <div class="banner-box">
         <a
           href="https://lootclick.net/_HszlLf-Uqqkt5ET4DcCllGNd7ZgqdRLk/1/"
