--- a/News-Articles/Roobet-Promo-Santa-$1000000-Sack/index.html
+++ b/News-Articles/Roobet-Promo-Santa-$1000000-Sack/index.html
@@ -221,7 +221,7 @@
 
     <!-- Content -->
 
-    <main class="container-news" onclick="myFunction2()">
+    <main class="container-news">
       <div class="banner-box">
         <a
           href="https://go.roobetaffiliates.com/visit/?bta=39114&nci=5349&utm_campaign=promodec"
