--- a/News-Articles/Thunderpick-Perfect-World-Shanghai-Major-2024/index.html
+++ b/News-Articles/Thunderpick-Perfect-World-Shanghai-Major-2024/index.html
@@ -224,7 +224,7 @@
 
     <!-- Content -->
 
-    <main class="container-news" onclick="myFunction2()">
+    <main class="container-news" >
       <div class="banner-box">
         <a
           href=" https://go.thunder.partners/visit/?bta=36640&nci=5560&campaign=ALL4WINS
