--- a/News-Articles/Wild-Endorphina-Tiger-Tournament/index.html
+++ b/News-Articles/Wild-Endorphina-Tiger-Tournament/index.html
@@ -221,7 +221,7 @@
 
     <!-- Content -->
 
-    <main class="container-news" onclick="myFunction2()">
+    <main class="container-news">
       <div class="banner-box">
         <a
           href="https://wildpartners.app/a55d1e542"
