--- a/Sports/index.html
+++ b/Sports/index.html
@@ -210,7 +210,7 @@
     </div>
 
     <!-- content -->
-    <main class="container" onclick="myFunction2()">
+    <main class="container">
       <div class="container-content" id="container-content-Sports">
         <div class="content-text-container">
           <img
