--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
     <!-- Content -->
 
-    <main class="container" onclick="myFunction2()">
+    <main class="container" ">
       <div class="container-content" id="container-content-Sports">
         <div class="content-text-container">
           <img
