--- a/Esports/index.html
+++ b/Esports/index.html
@@ -212,7 +212,7 @@
     </div>
 
     <!-- content -->
-    <main class="container" onclick="myFunction2()">
+    <main class="container" >
       <div class="container-content" id="container-content-ESports">
         <div class="content-text-container">
           <img
