--- a/News-Articles/BC.Game-Mining-Rush/index.html
+++ b/News-Articles/BC.Game-Mining-Rush/index.html
@@ -220,7 +220,7 @@
 
     <!-- Content -->
 
-    <main class="container-news" onclick="myFunction2()">
+    <main class="container-news">
       <div class="banner-box">
         <a
           href="https://bc.game/i-2bp167xaa-n/ "
