--- a/News-Articles/BetFuty-Aviator-Crash-Game/index.html
+++ b/News-Articles/BetFuty-Aviator-Crash-Game/index.html
@@ -222,7 +222,7 @@
 
     <!-- Content -->
 
-    <main class="container-news" onclick="myFunction2()">
+    <main class="container-news">
       <div class="banner-box">
         <a
           href=" https://betfury.bet/d27e2abbb"
