--- a/News-Articles/Esports-Event-Calendar-2025/index.html
+++ b/News-Articles/Esports-Event-Calendar-2025/index.html
@@ -222,7 +222,7 @@
 
     <!-- Content -->
 
-    <main class="container-news" onclick="myFunction2()">
+    <main class="container-news">
       <div class="banner-box">
         <img
           src="/img/news-banners/espoerts-events-banner.webp"
