--- a/News-Articles/GGBET-Weekly-Promo-65-Free-Spins/index.html
+++ b/News-Articles/GGBET-Weekly-Promo-65-Free-Spins/index.html
@@ -221,7 +221,7 @@
 
     <!-- Content -->
 
-    <main class="container-news" onclick="myFunction2()">
+    <main class="container-news">
       <div class="banner-box">
         <a
           href="https://ggbetpro.com/l/66c44186c92785c3930b1a10"
