--- a/News-Articles/Thunderpick-The-Piggy-Tap-Tournament/index.html
+++ b/News-Articles/Thunderpick-The-Piggy-Tap-Tournament/index.html
@@ -220,7 +220,7 @@
 
     <!-- Content -->
 
-    <main class="container-news" onclick="myFunction2()">
+    <main class="container-news">
       <div class="banner-box">
         <a
           href=" https://go.thunder.partners/visit/?bta=36640&nci=5502&campaign=ALL4WINS
