--- a/News-Articles/Thunderpick-same-game-combo/index.html
+++ b/News-Articles/Thunderpick-same-game-combo/index.html
@@ -222,7 +222,7 @@
 
     <!-- Content -->
 
-    <main class="container-news" onclick="myFunction2()">
+    <main class="container-news">
       <div class="banner-box">
         <!-- <a
           href=" https://ggbetpro.com/l/66c4406e38014986d50f649d"
