--- a/News-Articles/TrustDice-6th-Birthday/index.html
+++ b/News-Articles/TrustDice-6th-Birthday/index.html
@@ -222,7 +222,7 @@
 
     <!-- Content -->
 
-    <main class="container-news" onclick="myFunction2()">
+    <main class="container-news">
       <div class="banner-box">
         <a
           href="https://trustdice.win/?ref=u_all4wins"
