--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -75,6 +75,8 @@
             <img
               id="logo-img"
               src="/img/All4Wins-logo.webp"
+              width="300"
+              height="200"
               loading="lazy"
               alt="home logo"
             />
@@ -104,6 +106,8 @@
             <div class="nav-link casino-link">
               <img
                 src="/img/casino-logo.webp"
+                width="300"
+                height="200"
                 loading="lazy"
                 alt="Casino Icon"
                 class="nav-icon"
@@ -116,6 +120,8 @@
             <div class="nav-link esports-link">
               <img
                 src="/img/controller-logo.webp"
+                width="300"
+                height="200"
                 alt="Esports Icon"
                 class="nav-icon"
                 loading="lazy"
@@ -128,6 +134,8 @@
             <div class="nav-link sports-link">
               <img
                 src="/img/football-logo.webp"
+                width="300"
+                height="200"
                 alt="Sports Icon"
                 class="nav-icon"
                 loading="lazy"
@@ -143,6 +151,8 @@
           >
             <img
               src="/img/review-icon.webp"
+              width="300"
+              height="200"
               alt="Reviews Icon"
               class="nav-icon"
               loading="lazy"
@@ -169,6 +179,8 @@
           >
             <img
               src="/img/diamond-logo.webp"
+              width="300"
+              height="200"
               alt="Bonus Icon"
               class="nav-icon"
               loading="lazy"
@@ -186,6 +198,8 @@
             <div class="nav-link news-link">
               <img
                 src="/img/news-logo.webp"
+                width="300"
+                height="200"
                 alt="News Icon"
                 class="nav-icon"
                 loading="lazy"
@@ -219,6 +233,8 @@
           <img
             class="poker-cards-casino"
             src="/img/news-banners/slot-machine-main.webp"
+            width="300"
+            height="200"
             alt="poker cards"
           />
           <div class="content-text">
@@ -242,6 +258,8 @@
           <img
             class="slots-news-casino"
             src="/img/news-banners/poker-chips-casino.webp"
+            width="300"
+            height="200"
             alt="slots"
           />
           <div class="news-slider">
@@ -257,6 +275,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/mission-unscrollable.webp"
+                        width="300"
+                        height="200"
                         alt="Mission Uncrossable Banner"
                         loading="lazy"
                       />
@@ -276,6 +296,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/Kickstart-2025-with-Roobet-news.webp"
+                        width="300"
+                        height="200"
                         alt="ggbet-esl-bangkok-news"
                         loading="lazy"
                       />
@@ -302,6 +324,8 @@
                         src="/img/news-banners/ggbet-weekly-fs-news.webp"
                         alt="ggbet-esl-bangkok-news"
                         loading="lazy"
+                        width="300"
+                        height="200"
                       />
                     </div>
                     <div class="news-content">
@@ -325,6 +349,8 @@
                       <img
                         src="/img/news-banners/roobet-Santa-Sack-news.webp"
                         alt="ggbet-esl-bangkok-news"
+                        width="300"
+                        height="200"
                         loading="lazy"
                       />
                     </div>
@@ -350,6 +376,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/betfuty-winter-fest-news.webp"
+                        width="300"
+                        height="200"
                         alt="ggbet-esl-bangkok-news"
                         loading="lazy"
                       />
@@ -375,6 +403,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/betfury-winter-drop-news.webp"
+                        width="300"
+                        height="200"
                         alt="ggbet-esl-bangkok-news"
                         loading="lazy"
                       />
@@ -401,6 +431,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/duelbits-ch-bonus-news.webp"
+                        width="300"
+                        height="200"
                         alt="ggbet-esl-bangkok-news"
                         loading="lazy"
                       />
@@ -426,6 +458,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/lootbet-blast-news.webp"
+                        width="300"
+                        height="200"
                         alt="Rlootbet blast"
                         loading="lazy"
                       />
@@ -452,6 +486,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/betfury-blackjack-tournamnet-news.webp"
+                        width="300"
+                        height="200"
                         alt="Roobet’s-Latest-Sportsbook-Promos"
                         loading="lazy"
                       />
@@ -480,6 +516,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/lootbet-slot-news.webp"
+                        width="300"
+                        height="200"
                         alt="lootbet-slot-news"
                         loading="lazy"
                       />
@@ -508,6 +546,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/lootbet-quest.webp"
+                        width="300"
+                        height="200"
                         alt="lootbet-quest"
                         loading="lazy"
                       />
@@ -532,6 +572,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/betfury-battles.webp"
+                        width="300"
+                        height="200"
                         alt="BetFury-Battles"
                         loading="lazy"
                       />
@@ -553,6 +595,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/roobet-snoop-dogg-Dollars.webp"
+                        width="300"
+                        height="200"
                         alt="Roobet-Snoop-Dogg-Dollars"
                         loading="lazy"
                       />
@@ -574,6 +618,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/betfury-promo-code.webp"
+                        width="300"
+                        height="200"
                         alt="BetFury-Promo-Code"
                         loading="lazy"
                       />
@@ -595,6 +641,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/hotbox300x300.webp"
+                        width="300"
+                        height="200"
                         alt="Snoop's-Hot-Box-Game"
                         loading="lazy"
                       />
@@ -617,6 +665,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/Plinko .webp"
+                        width="300"
+                        height="200"
                         alt="Plinko banner"
                         loading="lazy"
                       />
@@ -640,6 +690,8 @@
                       <img
                         src="/img/NewsBackground.webp"
                         alt="news"
+                        width="300"
+                        height="200"
                         loading="lazy"
                       />
                     </div>
@@ -663,6 +715,8 @@
           <img
             class="roulette-top3-casino"
             src="/img/news-banners/poker-cards-casino.webp"
+            width="300"
+            height="200"
             alt="roulette"
           />
           <div class="top3casinos">
@@ -2730,6 +2784,8 @@
           <p>Slots</p>
           <img
             src="/img/news-banners/snoop-doggs-dollars.webp"
+            width="300"
+            height="200"
             loading="lazy"
             alt="game screenshot"
           />
@@ -2737,35 +2793,47 @@
           <img
             src="/img/news-banners/blackjack-example.webp"
             loading="lazy"
+            width="300"
+            height="200"
             alt="game screenshot"
           />
           <p>Roulette</p>
           <img
             src="/img/news-banners/roulette-example.webp"
             loading="lazy"
+            width="300"
+            height="200"
             alt="game screenshot"
           />
           <p>Baccarat</p>
           <img
             src="/img/news-banners/bacarat-example.webp"
             loading="lazy"
+            width="300"
+            height="200"
             alt="game screenshot"
           />
           <p>Poker</p>
           <img
             src="/img/news-banners/poker-gif-490.gif"
             loading="lazy"
+            width="300"
+            height="200"
             alt="game screenshot"
           />
           <p>Craps</p>
           <img
             src="/img/news-banners/craps-example2.gif"
             loading="lazy"
+            width="300"
+            height="200"
             alt="game screenshot"
           />
           <p>Live Dealer Games</p>
           <img
             src="/img/news-banners/live-dealer-example.webp"
+            width="300"
+            height="200"
             loading="lazy"
             alt="game screenshot"
           />
