fix hrml img width height

--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -795,7 +795,12 @@
 
       <div class="container-casinos">
         <div class="casino-main">
-          <img src="/img/news-banners/jackpot-casino.webp" alt="slot machine" />
+          <img
+            src="/img/news-banners/jackpot-casino.webp"
+            width="300"
+            height="200"
+            alt="slot machine"
+          />
         </div>
         <!-- Roobet -->
         <div class="main">
