fis img width height

--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -96,7 +96,14 @@
       <!-- Side Menu -->
       <div id="side-navigation" class="side-navigation">
         <div class="navigation-header">
-          <img src="/img/All4Wins-logo.webp" alt="Logo" class="logo-image" />
+          <img
+            src="/img/All4Wins-logo.webp"
+            width="300"
+            height="200"
+            loading="lazy"
+            alt="Logo"
+            class="logo-image"
+          />
           <a href="/"><p>All4Wins</p></a>
           <span class="close-button" onclick="toggleNavigation()">&times;</span>
         </div>
