--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -2792,7 +2792,7 @@
           rise of online gambling, players can now enjoy a vast range of games
           from the comfort of their homes. These games include:
         </p>
-        <div class="missionU">
+        <!-- <div class="missionU">
           <p>Slots</p>
           <img
             src="/img/news-banners/snoop-doggs-dollars.webp"
@@ -2849,7 +2849,7 @@
             loading="lazy"
             alt="game screenshot"
           />
-        </div>
+        </div> -->
 
         <p>
           In online casinos, you place bets on individual rounds, spins, or
