fiximg html width height and resizing img

--- a/News-Articles/BC.Game-LCFC-Bet-Guaranteed/index.html
+++ b/News-Articles/BC.Game-LCFC-Bet-Guaranteed/index.html
@@ -230,7 +230,7 @@
           aria-label="Read more about BCGame 200% bonus"
         >
           <img
-            src="/img/news-banners/BcGame-LCFC.avif"
+            src="/img/news-banners/BcGame-LCFC.webp"
             alt="BC>GAME 2000 bonus banner"
           />
         </a>
