--- a/Sports/index.html
+++ b/Sports/index.html
@@ -75,6 +75,8 @@
             <img
               id="logo-img"
               src="/img/All4Wins-logo.webp"
+              width="300"
+              height="200"
               loading="lazy"
               alt="home logo"
             />
@@ -95,7 +97,14 @@
       <!-- Side Menu -->
       <div id="side-navigation" class="side-navigation">
         <div class="navigation-header">
-          <img src="/img/All4Wins-logo.webp" alt="Logo" class="logo-image" />
+          <img
+            src="/img/All4Wins-logo.webp"
+            alt="Logo"
+            width="300"
+            height="200"
+            loading="lazy"
+            class="logo-image"
+          />
           <a href="/"><p>All4Wins</p></a>
           <span class="close-button" onclick="toggleNavigation()">&times;</span>
         </div>
@@ -105,6 +114,8 @@
             <div class="nav-link casino-link">
               <img
                 src="/img/casino-logo.webp"
+                width="300"
+                height="200"
                 loading="lazy"
                 alt="Casino Icon"
                 class="nav-icon"
@@ -117,6 +128,8 @@
             <div class="nav-link esports-link">
               <img
                 src="/img/controller-logo.webp"
+                width="300"
+                height="200"
                 alt="Esports Icon"
                 class="nav-icon"
                 loading="lazy"
@@ -129,6 +142,8 @@
             <div class="nav-link sports-link">
               <img
                 src="/img/football-logo.webp"
+                width="300"
+                height="200"
                 alt="Sports Icon"
                 class="nav-icon"
                 loading="lazy"
@@ -144,6 +159,8 @@
           >
             <img
               src="/img/review-icon.webp"
+              width="300"
+              height="200"
               alt="Reviews Icon"
               class="nav-icon"
               loading="lazy"
@@ -170,6 +187,8 @@
           >
             <img
               src="/img/diamond-logo.webp"
+              width="300"
+              height="200"
               alt="Bonus Icon"
               class="nav-icon"
               loading="lazy"
@@ -187,6 +206,8 @@
             <div class="nav-link news-link">
               <img
                 src="/img/news-logo.webp"
+                width="300"
+                height="200"
                 alt="News Icon"
                 class="nav-icon"
                 loading="lazy"
@@ -216,6 +237,8 @@
           <img
             class="content-sports"
             src="/img/news-banners/Charles-Oliveira-sports.webp"
+            width="300"
+            height="200"
             alt="Charles-Oliveira"
           />
           <div class="content-text">
@@ -246,7 +269,10 @@
         <div class="news-slider-container">
           <img
             class="news-sports-img"
-            src="/img/news-banners/tenis-news.webp"
+            src="/img/news-banners/
+            tenis-news.webp"
+            width="300"
+            height="200"
             alt="boxing"
           />
 
@@ -264,6 +290,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/roobet-sportsbook-january-news.webp"
+                        width="300"
+                        height="200"
                         alt="Mission Uncrossable Banner"
                         loading="lazy"
                       />
@@ -286,6 +314,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/GGBet-soccer-freebets-news.webp"
+                        width="300"
+                        height="200"
                         alt="ggbet-esl-bangkok-news"
                         loading="lazy"
                       />
@@ -311,6 +341,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/ggbet-tenis-freebets-news.webp"
+                        width="300"
+                        height="200"
                         alt="ggbet-esl-bangkok-news"
                         loading="lazy"
                       />
@@ -335,7 +367,9 @@
                   <a href="/News-Articles/BC.Game-LCFC-Bet-Guaranteed/">
                     <div class="news-banner">
                       <img
-                        src="/img/news-banners/BcGame-LCFC.avif"
+                        src="/img/news-banners/BcGame-LCFC.webp"
+                        width="300"
+                        height="200"
                         alt="ggbet-esl-bangkok-news"
                         loading="lazy"
                       />
@@ -360,6 +394,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/bcgame-ucl-lucky.webp"
+                        width="300"
+                        height="200"
                         alt="ggbet-esl-bangkok-news"
                         loading="lazy"
                       />
@@ -384,6 +420,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/ggbet-winter-football-bonuses-news.webp"
+                        width="300"
+                        height="200"
                         alt="ggbet-esl-bangkok-news"
                         loading="lazy"
                       />
@@ -407,6 +445,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/roobet-football-news.webp"
+                        width="300"
+                        height="200"
                         alt="ggbet-esl-bangkok-news"
                         loading="lazy"
                       />
@@ -438,6 +478,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/duelbits-ch-bonus-news.webp"
+                        width="300"
+                        height="200"
                         alt="ggbet-esl-bangkok-news"
                         loading="lazy"
                       />
@@ -463,6 +505,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/BC.Games-Banner_250x250.gif"
+                        width="300"
+                        height="200"
                         alt="5-Major-leagues-Promotion-BC.Games"
                         loading="lazy"
                       />
@@ -487,6 +531,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/bcgame-horeseriding-news.webp"
+                        width="300"
+                        height="200"
                         alt="bcgame horse riding"
                         loading="lazy"
                       />
@@ -510,6 +556,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/roobet-sports-promo.webp"
+                        width="300"
+                        height="200"
                         alt="Roobet’s-Latest-Sportsbook-Promos"
                         loading="lazy"
                       />
@@ -534,6 +582,8 @@
                       <img
                         src="/img/news-banners/betfury-sports.webp"
                         alt="All-Sports-Bonuses-at-BetFury"
+                        width="300"
+                        height="200"
                         loading="lazy"
                       />
                     </div>
@@ -555,6 +605,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/bcgame-200-bonus.avif"
+                        width="300"
+                        height="200"
                         alt="BCGAME-200-Sports-Bet-Bonus"
                         loading="lazy"
                       />
@@ -579,6 +631,8 @@
                       <img
                         src="/img/NewsBackground.webp"
                         alt="news "
+                        width="300"
+                        height="200"
                         loading="lazy"
                       />
                     </div>
@@ -602,6 +656,8 @@
           <img
             class="top3-spors-img"
             src="/img/news-banners/football-sports.webp"
+            width="300"
+            height="200"
             alt="football"
           />
           <div class="top3casinos">
@@ -683,7 +739,13 @@
 
       <div class="container-casinos" id="container-casino-Sports">
         <div class="sports-main">
-          <img src="/img/news-banners/basketball-sports.webp" alt="tenis" />
+          <img
+            src="/img/news-banners/basketball-sports.webp"
+            width="300"
+            height="200"
+            loading="lazy"
+            alt="tenis"
+          />
         </div>
         <!-- Roobet -->
         <div class="main">
