--- a/Sports/index.html
+++ b/Sports/index.html
@@ -269,8 +269,7 @@
         <div class="news-slider-container">
           <img
             class="news-sports-img"
-            src="/img/news-banners/
-            tenis-news.webp"
+            src="/img/news-banners/tenis-news.webp"
             width="300"
             height="200"
             alt="boxing"
