img width height html and img resize

--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -695,7 +695,7 @@
                   <a href="/News/">
                     <div class="news-banner">
                       <img
-                        src="/img/NewsBackground.webp"
+                        src="/img/NewsBackground2.webp"
                         alt="news"
                         width="300"
                         height="200"
