--- a/Esports/index.html
+++ b/Esports/index.html
@@ -77,6 +77,8 @@
             <img
               id="logo-img"
               src="/img/All4Wins-logo.webp"
+              width="300"
+              height="200"
               loading="lazy"
               alt="home logo"
             />
@@ -97,7 +99,14 @@
       <!-- Side Menu -->
       <div id="side-navigation" class="side-navigation">
         <div class="navigation-header">
-          <img src="/img/All4Wins-logo.webp" alt="Logo" class="logo-image" />
+          <img
+            src="/img/All4Wins-logo.webp"
+            width="300"
+            height="200"
+            loading="lazy"
+            alt="Logo"
+            class="logo-image"
+          />
           <a href="/"><p>All4Wins</p></a>
           <span class="close-button" onclick="toggleNavigation()">&times;</span>
         </div>
@@ -107,6 +116,8 @@
             <div class="nav-link casino-link">
               <img
                 src="/img/casino-logo.webp"
+                width="300"
+                height="200"
                 loading="lazy"
                 alt="Casino Icon"
                 class="nav-icon"
@@ -120,6 +131,8 @@
               <img
                 src="/img/controller-logo.webp"
                 alt="Esports Icon"
+                width="300"
+                height="200"
                 class="nav-icon"
                 loading="lazy"
               />
@@ -131,6 +144,8 @@
             <div class="nav-link sports-link">
               <img
                 src="/img/football-logo.webp"
+                width="300"
+                height="200"
                 alt="Sports Icon"
                 class="nav-icon"
                 loading="lazy"
@@ -146,6 +161,8 @@
           >
             <img
               src="/img/review-icon.webp"
+              width="300"
+              height="200"
               alt="Reviews Icon"
               class="nav-icon"
               loading="lazy"
@@ -172,6 +189,8 @@
           >
             <img
               src="/img/diamond-logo.webp"
+              width="300"
+              height="200"
               alt="Bonus Icon"
               class="nav-icon"
               loading="lazy"
@@ -189,6 +208,8 @@
             <div class="nav-link news-link">
               <img
                 src="/img/news-logo.webp"
+                width="300"
+                height="200"
                 alt="News Icon"
                 class="nav-icon"
                 loading="lazy"
@@ -212,12 +233,14 @@
     </div>
 
     <!-- content -->
-    <main class="container" >
+    <main class="container">
       <div class="container-content" id="container-content-ESports">
         <div class="content-text-container">
           <img
             class="content-img"
             src="/img/news-banners/jinx-lol.webp"
+            width="300"
+            height="200"
             alt="jinx"
           />
           <div class="content-text">
@@ -242,6 +265,8 @@
           <img
             class="top-right-image"
             src="/img/news-banners/lol-brown.webp"
+            width="300"
+            height="200"
             alt="Promotional Image"
           />
           <div class="news-slider">
@@ -256,6 +281,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/espoerts-events.webp"
+                        width="300"
+                        height="200"
                         alt="Plinko banner"
                         loading="lazy"
                       />
@@ -282,6 +309,8 @@
                     <div class="news-banner">
                       <img
                         src="/img/news-banners/GGBet-legendary-cashback-news.webp"
+                        width="300"
+                        height="200"
                         alt="ggbet-esl-bangkok-news"
                         loading="lazy"
                       />
@@ -304,7 +333,9 @@
                   <a href="/News/">
                     <div class="news-banner">
                       <img
-                        src="/img/NewsBackground.webp"
+                        src="/img/NewsBackground2.webp"
+                        width="300"
+                        height="200"
                         alt="news"
                         loading="lazy"
                       />
@@ -414,7 +445,12 @@
 
       <div class="container-casinos">
         <div class="lol-main">
-          <img src="/img/news-banners/yasuo-lol.webp" alt="lol hero img" />
+          <img
+            src="/img/news-banners/yasuo-lol.webp"
+            width="300"
+            height="200"
+            alt="lol hero img"
+          />
         </div>
 
         <!-- Roobet -->
