--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
                   <a href="/News/">
                     <div class="news-banner">
                       <img
-                        src="/img/NewsBackground.webp"
+                        src="/img/NewsBackground2.webp"
                         width="300"
                         height="200"
                         alt="news"
